--- a/Practica SVG/PracticaSvg1.html
+++ b/Practica SVG/PracticaSvg1.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XD</title>
+    <title>THE EFFORT </title>
+     <style>
+         a{ 
+        padding: 5px;
+        border-radius: 25px;
+        background-color: rgb(10, 117, 117);
+        color: bisque;
+        font-weight: bold;
+        text-decoration: none;
+    } 
+    a:hover{ 
+        padding: 5px;
+        border-radius: 25px;
+        background-color: bisque;
+        color: rgb(10, 117, 117);
+        font-weight: bold;
+        text-decoration: none;
+    } 
+    </style>
 </head>
 <body>
     
